# parquet-glib

./: .gitignore  Makefile.am  NOTICE.txt  README.md  autogen.sh  configure.ac
doc/: Makefile.am
doc/reference/: Makefile.am  parquet-glib-docs.sgml
parquet-glib/: Makefile.am  arrow-file-reader.cpp  arrow-file-reader.h  arrow-file-reader.hpp  arrow-file-writer.cpp  arrow-file-writer.h  arrow-file-writer.hpp  parquet-glib.h  parquet-glib.hpp  parquet-glib.pc.in
test/: run-test.rb  run-test.sh  test-arrow.rb
test/helper/: buildable.rb
